...

//MARK: Define Home Button Appearance
struct HomeButtonContent : View {
	var body: some View {
		HStack {
			Image(systemName: "house.circle")
			Text("Home")
				.font(.title3)
				.bold()
		}
		.frame(width: 150, height: 50)
	}
}
...
