...
					responseCodeType: "Informational",
					detailedDef: "The client SHOULD continue with its request. This interim response is used to inform the client that the initial part of the request has been received and has not yet been rejected by the server. The client SHOULD continue by sending the remainder of the request or, if the request has already been completed, ignore this response. The server MUST send a final response after the r
		responseDec(responseCode: 101,
					responseCodeTitle: "Switching Protocols",
					simplifiedDef: "placeholderSimplifiedDef",
					responseCodeType: "Informational",
					detailedDef: "placeholder"),
		responseDec(responseCode: 102,
					responseCodeTitle: "Processing (WebDAV)",
					simplifiedDef: "placeholderSimplifiedDef",
					responseCodeType: "Informational",
					detailedDef: "placeholder")
	]),
...
